httpd-ingress-test/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ingress
        pathType: Prefix
        backend:
          service:
            name: httpd-httpd-ingress-service
            port:
              number: 8083
